openshift/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: webapp
  labels:
    app: database-deployment
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      volumes:
      - name: db-password
        secret:
          secretName: db-secret
      - name: db-data
        emptyDir: {}   # ← هنا بدل الـ PVC
      containers:
      - name: database
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-data
          mountPath: "/var/lib/mysql"
        securityContext:
          runAsUser: 0
          fsGroup: 0
