openshift/proxy_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: webapp
spec:
  selector:
    app: proxy
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30001
